--- a/index.html
+++ b/index.html
@@ -3,3 +3,9 @@ layout: default
 ---
 
 Howdy.
+
+I'm actually amazed you managed to get here.
+
+If you were looking for the rad dad lawn mowing chad Kun Industries, you've found the right place.
+
+Have a look at [about](/about/) to see what's up.
