--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-Howdy.
+Howdy.  
 
-I'm actually amazed you managed to get here.
+I'm actually amazed you managed to get here.  
 
-If you were looking for the rad dad lawn mowing chad Kun Industries, you've found the right place.
+If you were looking for the rad dad lawn mowing chad Kun Industries, you've found the right place.  
 
-Have a look at [about](/about/) to see what's up.
+Have a look at <a href="/about/">about</a> to see what's up.  
