--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-Howdy.  <br>
+Howdy.  <br><br>
 
-I'm actually amazed you managed to get here.  <br>
+I'm actually amazed you managed to get here.  <br><br>
 
-If you were looking for the rad dad lawn mowing chad Kun Industries, you've found the right place.  <br>
+If you were looking for the rad dad lawn mowing chad Kun Industries, you've found the right place.  <br><br>
 
-Have a look at <a href="/about/">about</a> to see what's up.  <br>
+Have a look at <a href="/about/">about</a> to see what's up.  <br><br>
