--- a/services.html
+++ b/services.html
@@ -5,9 +5,7 @@ title: projects
 
 <div class="services">
 	{% for service in site.services %}
-		<h2>{{ service.name }} - {{ service.version }}</h2>
-		
-		<p>{{ service.content | markdownify }}</p>
+		<h2>{{ service.name }} - {{ service.description }}</h2>
 
 		<a href="{{ service.link }}" class="more-information">More Information</a>
 	{% endfor %}
