try to fix services

--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@ layout: default
 title: Services
 ---
 
-<div class="services">
+<div class="blog">
 	{% for service in site.services %}
 		<h2>{{ service.name }} - {{ service.description }}</h2>
 
