add labour service

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 ---
 layout: home
 ---
+
+<!-- this includes a layout because we want to use some of jekyll's settings like site name and description and such -->
