--- a/services.html
+++ b/services.html
@@ -5,8 +5,7 @@ title: Services
 
 <div class="blog">
 	{% for service in site.services %}
-		<h2>{{ service.name }}</h2>
+		<a href="{{ service.link }}"><h2>{{ service.name }}</h2></a>
 		<p>{{ service.description }}</p>
-		<a href="{{ service.link }}" class="more-information">More Information</a>
 	{% endfor %}
 </div>
