--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@ title: Services
 
 <div class="blog">
 	{% for service in site.services %}
-		<a href="{{ service.link }}"><h2>{{ service.name }}</h2></a>
+		<a href="{{ service.link }}"><h2 class="service-info">{{ service.name }}</h2></a>
 		<p>{{ service.description }}</p>
 	{% endfor %}
 </div>
