--- a/redesign/contact/index.html
+++ b/redesign/contact/index.html
@@ -36,8 +36,8 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="../../">Home</a></li>
-                        <li><a href="../../blog/">Blog</a></li>
+                        <li><a href="../">Home</a></li>
+                        <li><a href="../blog/">Blog</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -54,8 +54,8 @@
                     </ul>
                     
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="../../portfolio/">Portfolio</a></li>
-                        <li><a href="../../contact/">Contact</a></li>
+                        <li><a href="../portfolio/">Portfolio</a></li>
+                        <li><a href="../contact/">Contact</a></li>
                     </ul>
                 </div>
             </div>
