--- a/redesign/contact/index.html
+++ b/redesign/contact/index.html
@@ -50,12 +50,11 @@
                                 <li><a href="http://portal.kunindustries.com">Web Portal</a></li>
                             </ul>
                         </li>
-                        <li class="active"><a href="#">Lawn Care<span class="sr-only"> (current)</span></a></li>
                     </ul>
                     
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="../portfolio/">Portfolio</a></li>
-                        <li><a href="../contact/">Contact</a></li>
+                        <li class="active"><a href="#">Contact<span class="sr-only"> (current)</span></a></li>
                     </ul>
                 </div>
             </div>
