--- a/redesign/contact/index.html
+++ b/redesign/contact/index.html
@@ -67,6 +67,11 @@
                     display: flex;
                 }
                 
+                .contactContainer > div
+                {
+                    margin-right: 1em;
+                }
+                
                 .contactContainer .contact-form
                 {
                     min-width: 60%;
