--- a/redesign/contact/index.html
+++ b/redesign/contact/index.html
@@ -88,12 +88,14 @@
             <div class="contactContainer">
                 <div class="card contact-form">
                     <p style="font-size:350%">Contact</p>
-                    <div class="card">
-                        <h1>Description</h1>
-                    </div>
-                    <div class="card">
-                        <h1>Miscellaneous</h1>
-                    </div>
+                    
+                    <form class="form">
+                        name
+                        email
+                        category
+                        big content
+                        attachments
+                    </form>
                 </div>
                 
                 <div class="card contact-info">
