--- a/redesign/contact/index.html
+++ b/redesign/contact/index.html
@@ -99,8 +99,8 @@
                     </div>
                     <div class="card">
                         <h1>Email</h1>
-                        <p>contact@kunindustries.com<p>
-                        <p>support@kunindustries.com<p>
+                        <p><a href="mailto:contact@kunindustries.com">contact@kunindustries.com</a><p>
+                        <p><a href="mailto:support@kunindustries.com">support@kunindustries.com</a><p>
                     </div>
                 </div>
             </div>
